# neuro-stat

./: ProjectHome.md  README.md  makefile
neurocorr/: CMakeLists.txt  build.sh  makefile  setup.sh
neurocorr/arch/: maxabs-builder.hpp
neurocorr/arch/v1/: cpw-function.hpp  makefile  neurodata.cpp  neuron.hpp
neurocorr/arch/v1/tests/: CMakeLists.txt  test-experiment.cpp  test-main.cpp  test-neurodata.cpp
neurocorr/arch/v2/: box.cpp  boxes-linear.cpp  boxes-ops.cpp  boxes.hpp  cpwfn-build.cpp  cpwfn-integrate.cpp  neurocorr.cpp  phifn.cpp  phifn.hpp  train.hpp  types.hpp
neurocorr/arch/v2/tests/: CMakeLists.txt  test-ops.cpp  test-train.cpp
neurocorr/arch/v3/: GeneYann.R  Makevars  box.cpp  box.hpp  cpw-eval.cpp  cpw-from-spikes.cpp  cpw.cpp  matrix-builder.hpp  n8t1end20.txt  neurocorr.R  phi.hpp  train.hpp  vector-builder.hpp
neurocorr/arch/v3/tests/: CMakeLists.txt  main.cpp  test-cpw.cpp
neurocorr/codes/: BLHPlotbis.R  BoxLassoHawkes.R  BoxLassoTest.R  Nij.R  SimuHawkes.R  Xc.R  Xtc.R  bnc.R  fintegrale.R  intijnc.R  prodN.R  produit.R  vb.R
neurocorr/doc/: makefile  neurocorr.tex
neurocorr/src/: CMakeLists.txt
neurocorr/src/v1/: CMakeLists.txt  Makevars  cpw-function.cpp  experiment.hpp  gen_data_neur.R  makefile  neurocorr.R  neurocorr.cpp  neurodata.cpp  neurodata.hpp  neuron.cpp  neuron.hpp  record.cpp  record.hpp  step-function.cpp  step-function.hpp  test-experiment.cpp  test-main.cpp  test-nc.R  test-neurodata.cpp  test-records.cpp  trial.cpp  trial.hpp
neurocorr/src/v1/tests/: CMakeLists.txt  gen_data_neur.R  test-cpw.cpp  test-main.cpp  test-neurodata.cpp  test-records.cpp  test-step.cpp
neurocorr/src/v2/: CMakeLists.txt  box.cpp  box.hpp  boxes-linear.cpp  boxes-mixed.cpp  boxes.cpp  boxes.hpp  cpwfn-build.cpp  cpwfn-eval.cpp  cpwfn-integrate.cpp  cpwfn.cpp  cpwfn.hpp  makefile  neurocorr.R  neurocorr.cpp  neuron.cpp  neuron.hpp  phi.cpp  phi.hpp  phifn.cpp  phifn.hpp  records.cpp  records.hpp  train.cpp  train.hpp  types.cpp  types.hpp
neurocorr/src/v2/arch/: neuron.hpp  phi.cpp
neurocorr/src/v2/tests/: CMakeLists.txt  gen_data_neur.R  main.cpp  test-box.cpp  test-cpwfn.cpp  test-intg.cpp  test-nc.R  test-neuron.cpp  test-phi.cpp  test-phifn.cpp  test-records.cpp  test-train.cpp  test-types.cpp
neurocorr/v2/: CMakeLists.txt  box.hpp  boxes-intg.cpp  boxes-intg.hpp  boxes-linear.cpp  boxes-linear.hpp  boxes-mixed.cpp  boxes-mixed.hpp  boxes-ops.hpp  boxes.cpp  boxes.hpp  cpwfn-product.cpp  makefile  neurocorr.R  neurocorr.cpp  records.cpp  records.hpp  train.cpp  types.hpp
neurocorr/v2/tests/: gen_data_neur.R  main.cpp  test-box.cpp  test-intg.cpp  test-nc.R  test-ops.cpp  test-phifn.cpp  test-types.cpp
neurocorr/v3/: CMakeLists.txt  GeneYann.R  SimuHawkesPatou.R  box.cpp  box.hpp  boxes.cpp  boxes.hpp  cpw-eval.cpp  cpw-find.cpp  cpw-from-spikes.cpp  cpw-intg.cpp  cpw-max-on.cpp  cpw-product.cpp  cpw.cpp  cpw.hpp  experiment.hpp  gen_data_neur.R  matrix-builder.cpp  matrix-builder.hpp  neurocorr.R  neurocorr.cpp  phi.cpp  phi.hpp  records.cpp  records.hpp  test-nc.R  test-simu.R  train-find.cpp  train.cpp  train.hpp  types.cpp  types.hpp  vector-builder.cpp  vector-builder.hpp
neurocorr/v3/tests/: CMakeLists.txt  main.cpp  test-box.cpp  test-cpw.cpp  test-intg.cpp  test-phi.cpp  test-records.cpp  test-types.cpp
neurocorr/v4/: CMakeLists.txt  box.cpp  box.hpp  boxes.cpp  boxes.hpp  cpw-build.cpp  cpw-intg.cpp  cpw-max-abs-on.cpp  cpw-max-on.cpp  cpw-moments.cpp  cpw-product.cpp  cpw.cpp  cpw.hpp  locate.cpp  locate.hpp  makefile  matrix-builder.cpp  matrix-builder.hpp  maxabs-builder.cpp  minimiser.cpp  minimiser.hpp  neurocorr.R  neurocorr.cpp  phi.cpp  phi.hpp  records.cpp  records.hpp  symindex.hpp  test-min.R  test-phi.R  test.R  train-locate.cpp  train.cpp  train.hpp  types.cpp  types.hpp  vector-builder.cpp  vector-builder.hpp
neurocorr/v4/tests/: CMakeLists.txt  main.cpp  test-abs.cpp  test-builders.cpp  test-cpw.cpp  test-indx.cpp  test-intg.cpp  test-locate.cpp  test-min.cpp  test-moments.cpp  test-phi.cpp  test-records.cpp  test-types.cpp
src/coincidence/: CMakeLists.txt  coincidence.cpp  test_windows.cpp
src/coincidence/scilab/: coincidences.sci
src/wink/: CMakeLists.txt  test_lookup.cpp  test_windows.cpp  wink-c-matrix.cpp  wink-c-matrix.hpp  wink-coincidence.hpp  wink-iwindow.cpp  wink-iwindow.hpp  wink-lookup.hpp  wink-mutex.cpp  wink-mutex.hpp  wink-neuro-pair.cpp  wink-neuro-pair.hpp  wink-neuro-trials.cpp  wink-neuro-trials.hpp  wink-os.hpp  wink-permutation.cpp  wink-permutation.hpp  wink-rand32.cpp  wink-rand32.hpp  wink-thread.cpp  wink-utils.cpp  wink-utils.hpp  wink.cpp  wink.hpp
src/wink/par/: wink-mutex.hpp  wink-worker.cpp  wink-worker.hpp
src/wink/tests/: CMakeLists.txt  coincidence.cpp  lookup.cpp  neuro-trials.cpp  permutation.cpp  windows.cpp  workers.cpp
trunk/src/wink/: CMakeLists.txt  test_coincidence.cpp  wink-c-matrix.cpp  wink-c-matrix.hpp  wink-coincidence.cpp  wink-drawing.cpp  wink-drawing.hpp  wink-iwindow.cpp  wink-iwindow.hpp  wink-lookup.cpp  wink-lookup.hpp  wink-neuro-pair.cpp  wink-neuro-pair.hpp  wink-neuro-trials.cpp  wink-neuro-trials.hpp  wink-os.cpp  wink-os.hpp  wink-permutation.cpp  wink-permutation.hpp  wink-rand32.cpp  wink-rand32.hpp  wink-thread.hpp  wink-utils.cpp  wink.cpp  wink.hpp
trunk/v3/src/: CMakeLists.txt
trunk/v3/src/wink/: neuron.hpp  (+7 more)
v1/src/: CMakeLists.txt
v1/src/wink/: CMakeLists.txt  wink-iwindow.hpp  wink-lookup.hpp  wink.cpp
v1/src/wink_R/: CMakeLists.txt  makefile  test.sh  test2.sh  test_true_coinc.R
v3/src/: CMakeLists.txt
v3/src/helpers/: CMakeLists.txt  mpi-proba-cm.cpp  proba-cm.cpp
v3/src/wink/: CMakeLists.txt  coincidences.cpp  drawing.cpp  drawing.hpp  neuron.hpp  neurons.cpp  neurons.hpp
v3/src/wink_R/: CMakeLists.txt  makefile  simulationPPindep.R  simulationPPnonhom.R  test_boot.sh  test_coincmat.R  test_coincmat.sh  test_init.R  test_single.R  test_true_coinc.R  verif_tauPn.R  wink.R  wink.cpp
v3/src/wink_mam4/: CMakeLists.txt  makefile  test_boot_tau.sh  test_coincmat.R  test_init.R  test_pvalues.R  wink.R  wink.cpp
(+179 files in other folders)
