CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(neurocorr)

SET(SDK ${PROJECT_SOURCE_DIR}/yocto/sdk)

INCLUDE(${SDK}/share/yocto/rules.cmake)
INCLUDE(${SDK}/share/yocto/R.cmake)

INCLUDE_DIRECTORIES(${SDK}/include)
LINK_DIRECTORIES(${SDK}/lib)

SET(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})


#ADD_SUBDIRECTORY(v2)
ADD_SUBDIRECTORY(v3)
ADD_SUBDIRECTORY(v4)


