########################################################################
##
##
##
########################################################################
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(neuro-stati-v1)

INCLUDE(../../share/rules.cmake)

ADD_SUBDIRECTORY(wink)
ADD_SUBDIRECTORY(wink_R)


