########################################################################
##
##
##
########################################################################
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(neuro-stat-v3)

INCLUDE(../../share/rules.cmake)

ADD_SUBDIRECTORY(pyck)
ADD_SUBDIRECTORY(wink)
ADD_SUBDIRECTORY(wink_R)


