
IF(EXISTS ${YOCTO_RULES})

INCLUDE(${YOCTO_RULES})
INCLUDE_DIRECTORIES(${YROOT}/include)
LINK_DIRECTORIES(${YROOT}/lib)

ADD_EXECUTABLE(proba-cm proba-cm.cpp)
TARGET_LINK_YOCTO(proba-cm mk mpa)

INSTALL( TARGETS proba-cm RUNTIME DESTINATION bin )

FIND_PACKAGE(MPI)

IF(MPI_FOUND)

INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})

ADD_EXECUTABLE(mpi-proba-cm mpi-proba-cm.cpp)
TARGET_LINK_YOCTO(mpi-proba-cm mk mpa mpi)
TARGET_LINK_LIBRARIES( mpi-proba-cm ${MPI_LIBRARIES})

INSTALL( TARGETS mpi-proba-cm RUNTIME DESTINATION bin )


ENDIF(MPI_FOUND)


ENDIF(EXISTS ${YOCTO_RULES})

